# mail

./: .gitignore  Dockerfile  README.md  mail.cabal  runtime.c
.github/workflows/: ci.yml
app/: Main.hs
examples/: compile-to-llvm.sh  fibonacci-dp.ll  fibonacci-dp.mail  fibonacci-iter.ll  fibonacci-iter.mail  fibonacci-rec.ll  fibonacci-rec.mail  project-euler1.ll  project-euler1.mail  project-euler2.ll  project-euler2.mail  project-euler3.ll  project-euler3.mail  project-euler5.ll  project-euler5.mail  project-euler6.ll  project-euler6.mail  simple.ll
src/: Ast.hs  Check.hs  Checked.hs  Checker.hs  Compiler.hs  Generator.hs  Parser.hs  Stdlib.hs
tests/: TestExamples.hs
