cabal-version:      2.4
name:               mail
version:            0.1.0.0

author:             Liam Stevenson


library
    exposed-modules:  Ast, Checker, Parser

    build-depends:
        base ^>=4.17.2.0,
        string-interpolate ^>=0.3.2.0,
        megaparsec ^>=9.5.0,
        containers

    ghc-options: -Wall

    hs-source-dirs:   src
    default-language: Haskell2010

executable mail
    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.0,
        mail

    ghc-options: -Wall

    hs-source-dirs:   app
    default-language: Haskell2010
