cabal-version:      2.4
name:               mail
version:            0.1.0.0

author:             Liam Stevenson

extra-source-files:
    README.md
data-files:
    runtime.c


library
    exposed-modules:  Ast, Compiler, Checker, Checked, Stdlib, Parser, Generator
    other-modules: Paths_mail
    autogen-modules: Paths_mail

    build-depends:
        base            >=4.7   && <4.14,
        bytestring      >=0.10  && <0.11,
        llvm-hs-pretty  >=0.9   && <0.10,
        llvm-hs-pure    >=9.0   && <9.1,
        mtl             >=2.2.2 && <2.3,
        text            >=1.2   && <1.3,
        deepseq,
        string-interpolate,
        megaparsec,
        recursion-schemes  >=5.1   && <5.2,
        containers,
        transformers       >=0.5   && <0.6,
        process

    ghc-options: -Wall

    hs-source-dirs:   src
    default-language: Haskell2010

executable mail
    main-is:          Main.hs

    build-depends:
        base            >=4.7   && <4.14,
        filepath,
        mail

    ghc-options: -Wall

    hs-source-dirs:   app
    default-language: Haskell2010
