cabal-version:      2.4
name:               mail
version:            0.1.0.0

author:             Liam Stevenson

extra-source-files:
    README.md
    examples/*.mail
    examples/*.ll
data-files:
    runtime.c

library
    exposed-modules:  Ast, Compiler, Checker, Checked, Stdlib, Parser, Generator
    other-modules: Paths_mail
    autogen-modules: Paths_mail

    build-depends:
        base            >=4.7   && <4.14,
        bytestring      >=0.10  && <0.11,
        llvm-hs         >=9.0   && <9.1,
        llvm-hs-pure    >=9.0   && <9.1,
        mtl             >=2.2.2 && <2.3,
        string-interpolate,
        megaparsec,
        recursion-schemes  >=5.1   && <5.2,
        containers,
        filepath,
        process

    ghc-options: -Wall

    hs-source-dirs:   src
    default-language: Haskell2010

executable mailc
    main-is:          Main.hs

    build-depends:
        base            >=4.7   && <4.14,
        filepath,
        process,
        directory,
        optparse-applicative,
        mail

    ghc-options: -Wall

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite examples
    type:             exitcode-stdio-1.0
    main-is:          TestExamples.hs

    build-depends:
        base,
        filepath,
        directory,
        temporary,
        process,
        text,
        string-interpolate,
        mail

    ghc-options: -Wall

    hs-source-dirs:   tests
    default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/liam923/mail
